--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 </script>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <script type="module" src="/index.tsx"></script>
+      </div>
   </body>
 </html>
